--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 </div>
                 <div class="sobre-texto">
                     <p>Eu sou o Ilson</p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <p>Natural de Roraima, o Dr. Ilson é um advogado reconhecido por sua atuação estratégica e resultados concretos em diversas áreas do Direito. Com anos de experiência nos tribunais locais e nacionais, combina conhecimento técnico aprofundado com uma abordagem humanizada, garantindo não apenas a defesa dos interesses de seus clientes, mas também orientação clara e transparente.</p>
+                    <p>Formado pela [insira sua formação, ex: Universidade Federal de Roraima – UFRR], especialista em [áreas de destaque, ex: Direito Civil e Direito do Consumidor], atua com foco em [mencione nichos, ex: causas empresariais, direito familiar ou litígios complexos]. Sua trajetória é marcada por [destaques como prêmios, casos emblemáticos ou participação em entidades de classe].</p>
+                    <p>Além da advocacia, dedica-se a [adicione hobbies ou atividades relevantes, ex: palestras, projetos sociais ou artigos jurídicos], reforçando seu vínculo com a comunidade local.</p>
                 </div>
             </div>
         </div>
