--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <nav>
         <div class="nav-container">
-        <div class="logo"><a href="#sobre"><img src="logo.png" alt="logo" width="150px"></a></div>
+        <div class="logo"><a href="#sobre"><img srcset src="logo.png" alt="logo" width="150px"></a></div>
             <ul class="nav-links">
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#servicos">Serviços</a></li>
@@ -26,7 +26,7 @@
             <h1>Sobre o Advogado</h1>
             <div class="sobre-content">
                 <div class="sobre-img">
-                    <img src ="advogado.png" alt="Advogado">
+                    <img srcset src ="advogado.png" alt="Advogado">
                 </div>
                 <div class="sobre-texto">
                     <p>Eu sou o Ilson</p>
